@startuml
'https://plantuml.com/class-diagram

class VesselSinkUI{}
class VesselSinkController{
    +howMuchVesselSink(vessel)
}

class ShipStore{
    -AVL<Ship> shipList
    -AVL<Ship> shipList2
    -AVL<Ship> shipList3
    +howMuchVesselSink(vessel)
}

class Ship {
    -Integer mmsi
    -String vesselName
    -Integer imo
    -Integer callSign
    -String type
    -Double length
    -Double width
    -Double draft
}

class Company {
  -String designation
  +getShipStore()
}

class ShipCaptain{
    -String name
    -Email email
}

VesselSinkUI..>VesselSinkController
VesselSinkController..>ShipStore
ShipStore-->Ship
Company --> ShipCaptain : has registered >
ShipCaptain --> Ship : wants to know how much it's sink >
@enduml